default-backend-routing/ingress-default-backend-routing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxapp1
  annotations:
    # LOAD BALANCER NAME
    alb.ingress.kubernetes.io/load-balancer-name: app1ingress
    # LB CORE SETTING
    alb.ingress.kubernetes.io/scheme: internet-facing
    # HEALTH CHECK SETTING
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
spec:
  ingressClassName: my-aws-ingress-class
  defaultBackend:
    service: 
      name: app1-nginx-nodeport-service
      port:
        number: 80
